2003-07-08  Ahmon Dancy  <dancy@dancy>

	* incfilter.cl:  Fixed undesired spool truncation in debug mode.

2003-06-24  Ahmon Dancy  <dancy@dancy>

	* subs.cl:  Added just-body keyword arg to copy-message-to-stream
	to skip the headers.

2003-06-20  Ahmon Dancy  <dancy@dancy>

	* mailstatus.cl: reset 'new' counts for other inboxes if spool is
	empty.

2003-06-19  Kevin Layer  <layer@crikey>

	* Makefile: use /fi/cl/6.2/bin/redhat6/mlisp as the default

2003-06-19  Ahmon Dancy  <dancy@dancy>

	* incfilter.cl:  truncate spool file even if there are no messages
	inc'd into +inbox.

        * subs.cl:  Process all To: and Cc: headers found when computing
	the recipients list.

2003-06-16  Ahmon Dancy  <dancy@dancy>

	* Makefile:  Added 'install' rule.

	* incfilter.cl:  Pass unrecognized args over to inc.

	* mailstatus.cl:  Failed to reset other-inbox counters when spool
	changed.  Fixed.
	
